# fastFigma

./: .gitignore  .sesskey  README.md  main.py  pyproject.toml
app/: app.py
app/components/: head.py
notebooks/: fastfigma.ipynb
src/fastFigma/: api.py  export.py  figma.py  project.py  schema.py
